apply FB inventory

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -45,5 +45,6 @@
   "guest": "Guest",
   "save": "Save",
   "apply_voucher": "Apply voucher",
-  "voucher_applied": "Voucher Applied"
+  "voucher_applied": "Voucher Applied",
+  "out_of_stock": "Out of stock"
 }
